--- a/ToDo.WebApi/ToDo.WebApi.csproj
+++ b/ToDo.WebApi/ToDo.WebApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>d0497dec-326e-4e8d-9d09-88cd61e65223</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
