--- a/ToDo.Client/todo-app/package.json
+++ b/ToDo.Client/todo-app/package.json
@@ -13,11 +13,12 @@
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-sweet-state": "^2.6.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
